--- a/app_authors/Dockerfile
+++ b/app_authors/Dockerfile
@@ -1,5 +1,10 @@
-# Generar la iamgen docker: docker build -t app-authors .
+# Generar la iamgen
+#   docker: docker build -t app-authors .
+# docker tag app-authors paulmlp/app-authors //cambiar tag a uno que ya exsite
 
+#   docker: docker build -t paulmlp/app-authors .
+#   docker login
+#   docker push paulmlp/app-authors
 
 FROM eclipse-temurin:17.0.10_7-jre-alpine
 
