--- a/app_books/Dockerfile
+++ b/app_books/Dockerfile
@@ -1,6 +1,10 @@
-# Generar la iamgen docker: docker build -t app-authors .
+# Generar la iamgen
+#   docker: docker build -t app-books .
+# docker tag app-books paulmlp/app-books //cambiar tag a uno que ya exsite
 
-
+#   docker: docker build -t paulmlp/app-books .
+#   docker login
+#   docker push paulmlp/app-books
 FROM eclipse-temurin:17.0.10_7-jre-alpine
 
 RUN mkdir /app
